@@ -45,7 +45,6 @@ enum hash_func_e {
 	HASH_FUNC_MD6_256,
 	HASH_FUNC_MD6_384,
 	HASH_FUNC_MD6_512,
-	HASH_FUNC_SHA0,
 	HASH_FUNC_SHA1,
 	HASH_FUNC_SHA224,
 	HASH_FUNC_SHA256,
