@@ -1,7 +1,8 @@
 Summary of changes for each GtkHash release:
 
 1.
-	* Removed internal blake2 code and added option to use libb2 instead
+	* Removed internal BLAKE2 code and added option to use libb2 instead
+	* Added OpenSSL-1.1 as a BLAKE2b/BLAKE2s provider
 
 1.0.1 (2017-03-02)
 	* Fixed crash when certain Linux kernel crypto modules aren't loaded
